--- a/src/app/inside/products/goodsreceipt/goodsreceipt.component.html
+++ b/src/app/inside/products/goodsreceipt/goodsreceipt.component.html
@@ -1,7 +1,7 @@
    
-  <p center><a mat-flat-button color="warn" [routerLink]="['/inside/products']">Inventory</a></p>
+  <p center><a mat-stroked-button color="warn" [routerLink]="['/inside/products']">Back</a></p>
   
-  <h3>Goods posts</h3>
+  <h5>Goods posts</h5>
  
   <table mat-table [dataSource]="dataSource" class="order-form mat-elevation-z8">
     <!-- ProductName Column -->
