--- a/src/app/inside/products/product-list.component.css
+++ b/src/app/inside/products/product-list.component.css
@@ -4,7 +4,10 @@ table {
   }
   
   .mat-form-field {
-    font-size: 14px;
     width: 50%;
   }
-  
+
+  .submenu{
+    padding: 1px;
+    font-size: 11px;
+  }
