update order list layout and print

--- a/src/app/inside/orders/order-edit/order-edit.component.html
+++ b/src/app/inside/orders/order-edit/order-edit.component.html
@@ -8,7 +8,7 @@
     <input matInput placeholder="" formControlName="table" type="number">
   </mat-form-field>
   <mat-form-field class="order-50-width"  [floatLabel]="always" appearance="outline">
-    <mat-label>Số người</mat-label>
+    <mat-label>Ghi chu</mat-label>
   <input matInput placeholder="" formControlName="pax">  
 </mat-form-field>
    <div formArrayName="items" *ngFor="let item of items.controls, let i=index">
