--- a/src/app/inside/report/sale/sale.component.html
+++ b/src/app/inside/report/sale/sale.component.html
@@ -1,7 +1,7 @@
 
 
      
-  <p center><a mat-flat-button color="warn" [routerLink]="['/inside/orders', 0, 'edit']">New Order</a></p>
+  <!--<p center><a mat-flat-button color="warn" [routerLink]="['/inside/orders', 0, 'edit']">New Order</a></p>-->
   
   <h3>sale report</h3>
   <form class="report-form" [formGroup]="reportForm" > 
@@ -28,7 +28,7 @@
      <ng-container matColumnDef="createdDate">
        <th mat-header-cell *matHeaderCellDef>ID </th>
        <td mat-cell *matCellDef="let element">
-         <a [routerLink] = "['/inside/orders', element.createdDate]">{{element.createdDate}}</a></td>
+         <a [routerLink] = "['/inside/orders/edit/', element.createdDate]">{{element.createdDate}}</a></td>
      </ng-container>          
      
      <ng-container matColumnDef="table">
@@ -59,7 +59,7 @@
      <ng-container matColumnDef="action">
        <th mat-header-cell *matHeaderCellDef></th>
        <td mat-cell *matCellDef="let element">
-           <a mat-stroked-button color="primary" [routerLink]="['/inside/orders', element.createdDate, 'edit']">Edit</a>
+           <a mat-stroked-button color="primary" [routerLink]="['/inside/orders/edit/', element.createdDate]">Edit</a>
            <!--<a mat-stroked-button color="warn" routerLink="." (click)="delete(element.createdDate)">Delete</a>-->
          </td>
      </ng-container>
